added template example 1

--- a/index.html
+++ b/index.html
@@ -6,5 +6,15 @@
 </head>
 <body>
   <h1>Hello World</h1>
+  <ul id="myList">
+  </ul>
+  <script type="text/template" id="listItemTemplate">
+    <li>
+      <p><%= name %></p>
+    </li>
+  </script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
