--- a/index.html
+++ b/index.html
@@ -3,18 +3,23 @@
 <head>
   <meta charset="UTF-8">
   <title>Template Examples</title>
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
   <h1>Hello World</h1>
-  <ul id="myList">
-  </ul>
-  <script type="text/template" id="listItemTemplate">
-    <li>
-      <p><%= name %></p>
-    </li>
-  </script>
+  <div id="container"></div>
+  
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.0/mustache.js"></script>
   <script src="main.js"></script>
+  <script type="x-tmpl-mustache" id="listItemTemplate">
+    <ul id="myList">
+      {{#names}}
+      <li>
+        <p>{{.}}</p>
+      </li>
+      {{/names}}
+    </ul>
+  </script>
 </body>
 </html>
